--- a/next-app/package.json
+++ b/next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^4.0.1",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
