--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/package.json
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "thearc-screening-api",
+  "name": "thearc-screening-tool",
   "version": "1.0.0",
-  "description": "API functions for TheArc screening tool",
-  "main": "index.js",
+  "description": "TheArc Health Screening Tool",
+  "main": "index.html",
+  "scripts": {
+    "build": "echo 'No build step required'",
+    "dev": "echo 'No dev server required'"
+  },
   "dependencies": {
     "@notionhq/client": "^4.0.1",
     "@sendgrid/mail": "^8.1.0",
     "openai": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
