--- a/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/netlify.toml
+++ b/next-app/website-extension-backup-20250918-104005/questionnaire-extension/public/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   functions = "api"
   publish = "."
+  command = "npm install"
 
 [functions]
-  node_bundler = "esbuild"
+  node_bundler = "nft"
 
 [[redirects]]
   from = "/api/*"
