Prepare for Vercel production deployment: Add API routes, dependencies, and static files

--- a/next-app/package.json
+++ b/next-app/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@notionhq/client": "^4.0.1",
+    "@notionhq/client": "^4.0.2",
+    "@sendgrid/mail": "^8.1.6",
     "@vercel/analytics": "^1.5.0",
     "next": "15.4.1",
+    "openai": "^6.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-tsparticles": "^2.12.2",
