Restructure project: main website + screening tool with proper routing

--- a/next-app/vercel.json
+++ b/next-app/vercel.json
@@ -12,12 +12,16 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
-      "dest": "/public/$1"
+      "src": "/screening/(.*)",
+      "dest": "/public/screening/$1"
     },
     {
-      "src": "/",
-      "dest": "/public/index.html"
+      "src": "/screening",
+      "dest": "/public/screening/index.html"
+    },
+    {
+      "src": "/(.*\\.(html|css|js|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/public/$1"
     }
   ]
 }
